# transcription

./: Cargo.toml  README.md  flake.nix  main.rs
docs/: Code_Improvements.md  User_Requirements.md  functional.md
